--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="/images/icon.png">
+    
     <title>Portfolio Website</title>
+    <link rel="icon" type="image/x-icon" href="./images/profile.png">
 </head>
 <body>
     <header>
@@ -18,8 +19,8 @@
             <a href="#portfolios" >Portofolio</a>
             <a href="#skills" >Skills</a>
             <a href="#contact" >Contact</a>
-            <a href="/resume.pdf" target="_blank">
-                <button class="btn">Resume</button>
+            <a href="./resume.pdf" target="_blank">
+                <button class="btn">MyResume</button>
             </a>
         </nav>
         
@@ -107,18 +108,18 @@
             <!-- Portfolio 1 -->
             <div class="portfolio">
               <div class="portfolio-cover">
-                <img src="./images/portfolios/portfolio-1.png" alt="Portfolio 1">
+                <img src="./images/portfolios/porto-1.png" alt="Portfolio 1">
               </div>
               <div class="portfolio-info">
                 <div class="portfolio-title">
-                  <h4>Agency Website</h4>
+                  <h4>Goverment Website</h4>
                   <a href="/" class="portfolio-link">
                     <i class='fas fa-external-link-alt'></i>
                   </a>
                 </div>
                 <div class="portfolio-tags">
-                  <div>React</div>
-                  <div>Tailwind</div>
+                  <div>Codeigniter</div>
+                  <div>Bootstrap</div>
                 </div>
                 <p>
                   Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia
@@ -131,18 +132,18 @@
             <!-- Portfolio 2 -->
             <div class="portfolio">
               <div class="portfolio-cover">
-                <img src="./images/portfolios/portfolio-2.png" alt="Portfolio 1">
+                <img src="./images/portfolios/porto-2.png" alt="Portfolio 1">
               </div>
               <div class="portfolio-info">
                 <div class="portfolio-title">
-                  <h4>Landing Page</h4>
+                  <h4>Recruitment Web</h4>
                   <a href="/" class="portfolio-link">
                     <i class='fas fa-external-link-alt'></i>
                   </a>
                 </div>
                 <div class="portfolio-tags">
-                  <div>Vue</div>
-                  <div>Contentful</div>
+                  <div>PHP</div>
+                  <div>Mysql</div>
                 </div>
                 <p>
                   Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia
@@ -155,18 +156,18 @@
             <!-- Portfolio 3 -->
             <div class="portfolio">
               <div class="portfolio-cover">
-                <img src="./images/portfolios/portfolio-3.jpeg" alt="Portfolio 1">
+                <img src="./images/portfolios/porto-3.png" alt="Portfolio 1">
               </div>
               <div class="portfolio-info">
                 <div class="portfolio-title">
-                  <h4>Dashboard Admin</h4>
+                  <h4>School Website</h4>
                   <a href="/" class="portfolio-link">
                     <i class='fas fa-external-link-alt'></i>
                   </a>
                 </div>
                 <div class="portfolio-tags">
-                  <div>React</div>
-                  <div>Materialize</div>
+                  <div>Codeigniter</div>
+                  <div>Mysql</div>
                 </div>
                 <p>
                   Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia
@@ -192,12 +193,22 @@
                   <div></div>
                 </div>
                 <div class="education-info">
-                  <h4 class="education-title">Kingston University</h4>
-                  <p>Master's Degree - Software Engineering</p>
-                  <h4 class="education-years">2019 - 2023</h4>
+                  <h4 class="education-title">STMIK Pranata Indonesia</h4>
+                  <p>Bachelor's Degree - System Informatin</p>
+                  <h4 class="education-years">2020 - 2024</h4>
                 </div>
               </div>
               <div class="education">
+                <div class="line">
+                  <div></div>
+                </div>
+                <div class="education-info">
+                  <h4 class="education-title">SMKN 6 Kota Bekasi</h4>
+                  <p>Vocational High School - Teknik Pendingin & tata Udara</p>
+                  <h4 class="education-years">2014 - 2019</h4>
+                </div>
+              </div>
+              <!-- <div class="education">
                 <div class="line">
                   <div></div>
                 </div>
@@ -206,42 +217,32 @@
                   <p>Master's Degree - Software Engineering</p>
                   <h4 class="education-years">2019 - 2023</h4>
                 </div>
-              </div>
-              <div class="education">
-                <div class="line">
-                  <div></div>
-                </div>
-                <div class="education-info">
-                  <h4 class="education-title">Kingston University</h4>
-                  <p>Master's Degree - Software Engineering</p>
-                  <h4 class="education-years">2019 - 2023</h4>
-                </div>
-              </div>
+              </div> -->
             </div>
   
             <div class="skills-right">
-              <p>
-                For 5+ years, I have been continuously learning in the field of
-                front-end and experimenting with new technologies and frameworks,
-                and here you can see a summary of my skills. Field of front-end
-                and experimenting with new technologies.
+              <p class="skills-description">
+                Graduated with a Bachelor's degree in Information Systems, specializing in system development and data management.
+Experienced in developing and implementing websites through an internship opportunity at a government agency.
+Holds a basic web developer certification to support competencies in website development, seeking job opportunities
+in data analysis, web development, and project management.
               </p>
   
               <div class="skills-list">
                 <ul>
                   <li>React JS</li>
                   <li>Node JS</li>
-                  <li>MongoDB</li>
+                  <li>Mysql</li>
                   <li>HTML</li>
-                  <li>Vue JS</li>
+                  <li>Bootstrap</li>
                 </ul>
   
                 <ul>
                   <li>CSS</li>
-                  <li>Typescript</li>
+                  <li>Javascript</li>
                   <li>Next JS</li>
                   <li>GraphQl</li>
-                  <li>Angular JS</li>
+                  <li>Draw.io</li>
                 </ul>
               </div>
             </div>
@@ -272,21 +273,21 @@
           <div class="contact-right">
             <div class="contact-item">
               <div class="contact-item-icon">
-                <i class='fas fa-home'></i>
+                <i class="fa-sharp-duotone fa-solid fa-location-arrow"></i>
               </div>
               <div class="contact-item-detail">
                 <h4>Address</h4>
-                <p>3424 Layman Avenue, Fayetteville, NC</p>
+                <p>Bekasi Timur, Kota Bekasi, Jawa Barat</p>
               </div>
             </div>
   
             <div class="contact-item">
               <div class="contact-item-icon">
-                <i class='fas fa-phone'></i>
+                <i class='fa-brands fa-whatsapp'></i>
               </div>
               <div class="contact-item-detail">
-                <h4>Phone</h4>
-                <p>(501) 414-1541</p>
+                <h4>Whatsapp Contact</h4>
+                <p>+(62) 895-3215-80868</p>
               </div>
             </div>
   
@@ -296,7 +297,7 @@
               </div>
               <div class="contact-item-detail">
                 <h4>Email</h4>
-                <p>dummyemail@gmail.com</p>
+                <p>erskim99@gmail.com</p>
               </div>
             </div>
           </div>
@@ -306,25 +307,25 @@
 <!-- footer - start-->
     <footer>
         <div class="footer-icons">
-          <a href="#">
+         <!--  <a href="#">
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24">
               <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"></path>
             </svg>
           </a>
-  
-          <a href="#">
+   -->
+          <a href="https://www.linkedin.com/in/imam-attirmidi/">
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24">
               <path d="M4.98 3.5c0 1.381-1.11 2.5-2.48 2.5s-2.48-1.119-2.48-2.5c0-1.38 1.11-2.5 2.48-2.5s2.48 1.12 2.48 2.5zm.02 4.5h-5v16h5v-16zm7.982 0h-4.968v16h4.969v-8.399c0-4.67 6.029-5.052 6.029 0v8.399h4.988v-10.131c0-7.88-8.922-7.593-11.018-3.714v-2.155z"></path>
             </svg>
           </a>
   
-          <a href="#">
+          <!-- <a href="#">
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24">
               <path d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"></path>
             </svg>
-          </a>
+          </a> -->
   
-          <a href="#">
+          <a href="https://github.com/CerdikTeamID">
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24">
               <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"></path>
             </svg>
