--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
             <!-- <h3 class="typing-text">I'm a <span></span></h3> -->
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus labore dolores esse. Odit similique doloribus tenetur doloremque, sunt commodi in ipsa repudiandae debitis deleniti blanditiis quibusdam quaerat neque asperiores ea.</p>
             <div class="social-icons">
-                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="#"><i class="fa-brands fa-github"></i></a>
-                <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/imam-attirmidi/"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://github.com/CerdikTeamID"><i class="fa-brands fa-github"></i></a>
+                <!-- <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram"></i></a> -->
             </div>
             <a href="#contact" class="btn">Hire me</a>
         </div>
